--- a/notebooks/Ch03-3-Functions-UserDefined.ipynb
+++ b/notebooks/Ch03-3-Functions-UserDefined.ipynb
@@ -85,17 +85,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Goodbye cruel world!\n"
+     ]
+    }
+   ],
    "source": [
     "# Function definition\n",
     "# function prints the result but doesn't explictly return anything\n",
     "def greet():\n",
     "    print('Hello World!')\n",
-    "    print('Goodbye cruel world!')"
+    "    print('Goodbye cruel world!')\n",
+    "\n",
+    "greet()"
    ]
   },
   {
@@ -124,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -147,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -158,7 +169,7 @@
        "function"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,9 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Passing data as arguments to functions\n",
     "- functions are subprograms that may need external data to work with\n",
