--- a/notebooks/Ch03-3-Functions-UserDefined.ipynb
+++ b/notebooks/Ch03-3-Functions-UserDefined.ipynb
@@ -815,7 +815,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Function calling a function\n",
     "- a function can be called from within another function\n",
